# toy

effects/: LICENSE  effects.cabal
effects/src/: Constraint.hs  Examples.hs  Infer.hs  Subst.hs  Syntax.hs  Unify.hs  Unique.hs
rewriting/: ACmatch.hs  LICENSE  rewriting.cabal
