name:                rewriting
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Iago Abal <mail@iagoabal.eu>
maintainer:          Iago Abal <mail@iagoabal.eu>
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     ACmatch
  -- other-modules:       
  other-extensions:    FlexibleInstances, NamedFieldPuns, TupleSections, TypeSynonymInstances, ViewPatterns
  build-depends:       base >=4.5 && <4.6,
                       containers >=0.5 && <0.6,
                       combinat ==0.2.*,
                       predicates ==0.1
  -- hs-source-dirs:      
  default-language:    Haskell2010
